k8s/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sgame-minio-service
spec:
  type: ClusterIP
  selector:
    app: sgame-minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
