k8s/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sgame-minio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: sgame.local
      http:
        paths:
          - path: /storage/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sgame-minio-service
                port:
                  number: 9000
